--- a/projeto_i/css/style.css
+++ b/projeto_i/css/style.css
@@ -1,3 +1,7 @@
+body {
+    color: white;
+}
+
 .attribution { font-size: 11px; text-align: center; }
 
 .attribution a { color: hsl(228, 45%, 44%); }
