--- a/projeto_i/css/style.css
+++ b/projeto_i/css/style.css
@@ -1,29 +1,53 @@
-body { background-color: hsl(233, 47%, 7%); display: inline;}
-
-.primeira-parte h1 {
-    color: hsl(0, 0%, 100%);
-    /* font-size: ; */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.main-paragraph { 
-    color: hsla(0, 0%, 100%, 0.75);
+body {
+    background-color: hsl(233, 47%, 7%);
     font-size: 15px;
+    font-family: 'Inter', sans-serif;
 }
 
-.numeros { color: white; font-weight: bold;
+/* .primeira-parte h1 {
+    color: hsl(0, 0%, 100%);
+    font-size: ;
+} 
+
+*/
+
+.main-heading,
+.stat {
+    color: hsl(0, 0%, 100%);
+    font-family: 'Lexend Deca', sans-serif;
+    margin: 10px 0;
 }
 
-.cont { color: hsla(0, 0%, 100%, 0.6); text-transform: uppercase;}
+.main-paragraph {
+    color: hsla(0, 0%, 100%, 0.75);
+    font-family: 'Lexend Deca', sans-serif;
+    margin: 30px;
+}
+
+.stat-heading {
+    color: hsla(0, 0%, 100%, 0.6);
+    text-transform: uppercase;
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+/*
+
+
 
 .primeira-parte {background-color: hsl(244, 38%, 16%); width: 50%; padding: 5%;}
 
 span {color: hsl(277, 64%, 61%); }
 
-.img-work{background-color: hsl(277, 64%, 61%);}
+.segunda-parte{background-color: hsl(277, 64%, 61%);}
 
 .img {width: 50%; opacity: 0.2;}
 
 .attribution { font-size: 11px; text-align: center; }
 
-.attribution a { color: hsl(228, 45%, 44%); }
-
+.attribution a { color: hsl(228, 45%, 44%); } */
