--- a/projeto_i/css/style.css
+++ b/projeto_i/css/style.css
@@ -6,48 +6,71 @@
 
 body {
     background-color: hsl(233, 47%, 7%);
-    font-size: 15px;
-    font-family: 'Inter', sans-serif;
+
 }
 
-/* .primeira-parte h1 {
-    color: hsl(0, 0%, 100%);
-    font-size: ;
-} 
+.primeira-parte ul {
+    list-style: none;
+}
 
-*/
+span {color: hsl(277, 64%, 61%); }
 
 .main-heading,
 .stat {
     color: hsl(0, 0%, 100%);
-    font-family: 'Lexend Deca', sans-serif;
     margin: 10px 0;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
 }
 
 .main-paragraph {
     color: hsla(0, 0%, 100%, 0.75);
     font-family: 'Lexend Deca', sans-serif;
-    margin: 30px;
+    margin: 10px 0;
+    font-weight: 400;
+    font-size: 15px;
 }
 
 .stat-heading {
     color: hsla(0, 0%, 100%, 0.6);
     text-transform: uppercase;
     font-family: 'Lexend Deca', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
 }
-
-/*
-
-
-
-.primeira-parte {background-color: hsl(244, 38%, 16%); width: 50%; padding: 5%;}
-
-span {color: hsl(277, 64%, 61%); }
-
-.segunda-parte{background-color: hsl(277, 64%, 61%);}
-
-.img {width: 50%; opacity: 0.2;}
 
 .attribution { font-size: 11px; text-align: center; }
 
-.attribution a { color: hsl(228, 45%, 44%); } */
+.attribution a { color: hsl(228, 45%, 44%); }
+
+li.stat {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.card-principal {
+    margin: 100 auto;
+    width: 1440px;
+    height: 40%;
+    border-radius: 105px;
+}
+.card-principal .primeira-parte {
+    background-color: hsl(244, 38%, 16%);
+    width: 715px;
+    margin: 0 auto;
+    display: inline-block;
+    height: 40% ;
+  }
+
+.card-principal .segunda-parte {
+    background-color: hsl(277, 64%, 61%);
+    width:  715px;
+    display: inline-block;
+  
+    margin: 0 auto;
+}
+
+.img {opacity: 0.2;
+
+}
+
