--- a/projeto_i/css/style.css
+++ b/projeto_i/css/style.css
@@ -6,21 +6,27 @@
 
 body {
     background-color: hsl(233, 47%, 7%);
-
+    font-size: 15px;
+    width: 1440px;
 }
 
 .primeira-parte ul {
     list-style: none;
 }
 
-span {color: hsl(277, 64%, 61%); }
+span {
+    color: hsl(277, 64%, 61%);
+}
 
 .main-heading,
 .stat {
     color: hsl(0, 0%, 100%);
-    margin: 10px 0;
     font-family: 'Inter', sans-serif;
     font-weight: 700;
+}
+
+.main-heading {
+    font-size: 40px;
 }
 
 .main-paragraph {
@@ -28,7 +34,8 @@ span {color: hsl(277, 64%, 61%); }
     font-family: 'Lexend Deca', sans-serif;
     margin: 10px 0;
     font-weight: 400;
-    font-size: 15px;
+    margin-top: 35px;
+    line-height: 30px;
 }
 
 .stat-heading {
@@ -39,38 +46,49 @@ span {color: hsl(277, 64%, 61%); }
     font-size: 15px;
 }
 
-.attribution { font-size: 11px; text-align: center; }
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
 
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
 
+.lista {
+    margin-top: 35px;
+}
 li.stat {
     display: inline-block;
     margin-right: 20px;
 }
 
 .card-principal {
-    margin: 100 auto;
-    width: 1440px;
-    height: 40%;
-    border-radius: 105px;
+    margin: 170px auto;
+    width: 1100px;
+    background-image: url("/projeto_i/images/image-header-desktop.jpg");  
+    background-repeat: no-repeat;
+    background-position-x: right;
 }
+
 .card-principal .primeira-parte {
     background-color: hsl(244, 38%, 16%);
-    width: 715px;
+    width: 55%;
     margin: 0 auto;
     display: inline-block;
-    height: 40% ;
-  }
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px ;
 
-.card-principal .segunda-parte {
-    background-color: hsl(277, 64%, 61%);
-    width:  715px;
-    display: inline-block;
-  
+    height: 100%;
+    padding: 30px 75px;
+    }
+
+
+    /* background-color: hsl(277, 64%, 61%); */
+    
+    
+
+.img {
+    opacity: 0.2;
     margin: 0 auto;
 }
-
-.img {opacity: 0.2;
-
-}
-
