--- a/projeto_i/css/style.css
+++ b/projeto_i/css/style.css
@@ -52,7 +52,10 @@ span {
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: hsl(229, 63%, 95%);
+}
+.attribution {
+    color: white;
 }
 
 .lista {
@@ -60,15 +63,17 @@ span {
 }
 li.stat {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 .card-principal {
-    margin: 170px auto;
+    margin: 170px auto 100px;
     width: 1100px;
     background-image: url("/projeto_i/images/image-header-desktop.jpg");  
     background-repeat: no-repeat;
     background-position-x: right;
+    background-color:  hsl(277, 64%, 61%); 
+    background-blend-mode:overlay ;
 }
 
 .card-principal .primeira-parte {
@@ -76,19 +81,6 @@ li.stat {
     width: 55%;
     margin: 0 auto;
     display: inline-block;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px ;
-
     height: 100%;
     padding: 30px 75px;
     }
-
-
-    /* background-color: hsl(277, 64%, 61%); */
-    
-    
-
-.img {
-    opacity: 0.2;
-    margin: 0 auto;
-}
